<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnImagePickerDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_demo"
        android:onClick="imagePickerDemo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnDownloadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_image"
        android:onClick="downloadImageDemo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnImagePickerDemo" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnAccessMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access_media_location"
        android:onClick="accessMediaLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDownloadImage" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnFileDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_demo"
        android:onClick="fileDemo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAccessMedia" />


    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnOpenDocTreeDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_document_tree_demo"
        android:onClick="folderDemo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFileDemo" />






</androidx.constraintlayout.widget.ConstraintLayout>